bai95:Cấu hình Router/Layout cho dự án

--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -4,6 +4,10 @@
 :root{
     --primary: #fe2c55;
 }
+
+*{
+    box-sizing: border-box;
+}
 html{
     font-size: 62.5%;
 }
@@ -12,5 +16,5 @@ body{
     font-size: 1.6rem;
     line-height: 1.5;
     text-rendering: optimizeSpeed;
-    
+
 }
